Working toward seperation.
The goal here is to make a secure (TLS) connection with the webserver
that actually launches the session.  That is nearly done.

--- a/conf/global.ini
+++ b/conf/global.ini
@@ -7,7 +7,8 @@ group = ${System:user}
 home-path = /home/${System:user}
 src-path = ${System:home-path}/github/MemoryOracle/morunner/src
 config-dir-path = ${System:home-path}/github/MemoryOracle/morunner/conf
-port = 18942
+port = 18943
+address = ::1
 
 [Valgrind]
 exec-file-path = ${System:bin-dir-path}/valgrind
@@ -25,9 +26,7 @@ exec-file-path = ${System:bin-dir-path}/python3.5
 config-dir-path = ${System:config-dir-path}/security
 config-file-path = ${Security:config-dir-path}/${System:hostname}.ini
 cipher-list = ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256
-; cipher-list = AES128-GCM-SHA256
 ecdh-curve = secp384r1
-; ecdh-curve = prime256v1
 crl-path = ${Security:config-dir-path}/crl/crl.pem
 ca-crt-path = ${Security:config-dir-path}/certificates/ca.crt
 crt-path = ${Security:config-dir-path}/certificates/${System:hostname}.crt
